--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Gerador de Senha</title>
 </head>
 <body>
+    <main>
     <h1> &#x1F512; Gerador de Senhas Seguras</h1>
     <button>  Gerador de senha</button>
     <h2>....</h2>
-    
+    </main>
     <script src ="/src/main.js" type ="module"></script>
     
 </body>
